Add check back date, modify main color

--- a/ragna-coming-soon-site/index.html
+++ b/ragna-coming-soon-site/index.html
@@ -20,6 +20,7 @@
         </div>
         <div class="coming-soon">
           <h3>Coming soon</h3>
+          <p><i>Check back after 26th October 2023 for more details!</i></p>
         </div>
         <div class="footer">
           <p>
