--- a/ragna/deploy2/_templates/login.html
+++ b/ragna/deploy2/_templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <div class="d-flex align-items-center py-4 bg-body-tertiary">
   <main class="form-signin w-100 m-auto">
-    <form hx-post="/login" hx-target="#failed-login">
+    <form hx-post="/ui/login" hx-target="#failed-login">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
       <div class="form-floating">
