--- a/ragna/deploy2/_templates/login.html
+++ b/ragna/deploy2/_templates/login.html
@@ -38,6 +38,12 @@
       <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p>
     </form>
+
+    <div>
+      <a href="https://github.com/login/oauth/authorize?client_id=1d34d4bda57e821ee150">
+        <button class="btn btn-primary w-100 py-2">GitHub</button>
+      </a>
+    </div>
   </main>
 </div>
 {% endblock %}
