--- a/ragna/deploy/_templates/base.html
+++ b/ragna/deploy/_templates/base.html
@@ -37,13 +37,12 @@
         background-color: white;
         padding: 20px;
         box-shadow: 20px;
-        background-color: red;
       }
 
       {{ __template_css__ }}
   </style>
   <body>
-    <div class="auth">
+    <div class="auth border rounded bg-light">
       {% block content %}{% endblock %}
     </div>
   </body>
